fix(FEC-14754): Make scroll bar of the description visible (#1109)
Make scroll bar of the description visible

[FEC-14754](https://kaltura.atlassian.net/browse/FEC-14754)

[FEC-14754]:
https://kaltura.atlassian.net/browse/FEC-14754?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

--- a/src/components/media-info-display/_media-info-display.scss
+++ b/src/components/media-info-display/_media-info-display.scss
@@ -80,14 +80,9 @@
         width: 4px;
       }
 
-      &::-webkit-scrollbar-track {
-        visibility: hidden;
-      }
-
       &::-webkit-scrollbar-thumb {
         background-color: rgba(255, 255, 255, 0.3);
         border-radius: 3px;
-        visibility: hidden;
       }
 
       &.scrolling::-webkit-scrollbar-track,
